--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span class="navbar-toggler-icon"></span>
         </button> -->
     <a class="navbar-brand">
-      <div class="app-name"><img src="" />dados comunidados</div>
+      <div class="app-name"><img src="" />COMUNIDADOS</div>
     </a>
     <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
