media queries for base map UI

--- a/index.html
+++ b/index.html
@@ -19,43 +19,48 @@
   <link rel="stylesheet" href="css/Control.OSMGeocoder.css" />
   <link rel="stylesheet" href="css/leaflet-measure.css" />
   <link rel="stylesheet" href="css/nav.css" />
-  <title>dados-comunidados</title>
+  <title>COMUNIDADOS</title>
 </head>
-
 <body>
   <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
     <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" id="collapse-button" (click)="isCollapsed = !isCollapsed" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button> -->
     <a class="navbar-brand">
-      <div class="app-name"><img src="" />COMUNIDADOS</div>
+      <div class="app-name">
+          <img src="" />
+          COMUNIDADOS
+      </div>
+      <span id="info-btn">
+          <button type="button" id="#help-modal" class="btn btn-primary" data-toggle="modal" data-target="#help-popup">
+            <i class="fa fa-info" aria-hidden="true"></i>
+          </button>
+      </span>
     </a>
-    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Maps</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Tools</a>
-        </li>
-      </ul>
-
-    </div> -->
   </nav>
 
+
+  <!-- Modal -->
+  <div class="modal fade" id="help-popup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">About this application</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          This application was built with the help of ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div id="swipe-wrapper" class="row">
-    <!-- <div class="swipe-left-arrow col">
-      <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
-    </div>
-    <div class="data-viz-name col-6">
-      <span id="dataVizSelection">Active Selection</span>
-    </div>
-    <div class="swipe-right-arrow col">
-      <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
-    </div> -->
     <div class="site-selection-container col-4">
       <select class="site-selection" style="max-width: 150px">
         <option value=""></option>
@@ -165,6 +170,8 @@
   <script src="data/heliopolisdistrict.js"></script>
   <script src="data/saofranciscodistrict.js"></script>
   <script src="js/customMapFunctions.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 
 </html>
