--- a/pr.html
+++ b/pr.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,7 +42,7 @@
       </a>
     </span>
     <a id="info-btn">
-      <span>About this Application</span>
+      <span>Sobre este Aplicativo...</span>
       <button type="button" id="#help-modal" class="btn btn-primary" data-toggle="modal" data-target="#help-popup">
         <i class="fa fa-info" aria-hidden="true"></i>
       </button>
@@ -55,13 +55,13 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">About this application</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Sobre este Aplicativo...</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          This application was built with the help of Kristine Stiphany, Kirsten Larson, and Nathan Brigmon during the Chapa Project which was funded by the National Science Foundation and the University of Texas at Austin.
+          Esta aplicação foi construída com a ajuda de Kristine Stiphany, Kirsten Larson e Nathan Brigmon durante o Projeto Chapa, que foi financiado pela National Science Foundation e pela Universidade do Texas em Austin.
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -83,56 +83,56 @@
   <div class="site-selection-container col-8"> -->
       <select class="metric-selection" style="min-width: 180px; max-width: 250px">
         <option value=""></option>
-        <option value='qual' count='random' label='Q1_3'>District</option>
-        <option value='qual' count='4' label='Q3'>Development Type</option>
-        <option value='sequ' max='8' min='1' breaks='1.6,3.2,4.8,6.4' label='Q4'>Building Storie</option>
-        <option value='sequ' max='68.5' min='26.5' breaks='27.4,33,41.1,54.8' label='Q11'>Age</option>
-        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q12'>Gender</option>
-        <option value='sequ' max='55' min='2' breaks='11,22,33,44' label='Q197'>Residency Duration - São Paulo</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q54'>Resident Displacement</option>
-        <option value='sequ' max='32' min='1' breaks='6.4,12.8,19.2,25.6' label='Q42'>Residency Duration - House</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q139'>Original Ownership</option>
-        <option value='qual' count='random' label='Q10'>Tenure</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q5_1'>Rental Properties</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q214'>Owner-Occupation</option>
-        <option value='sequ' max='2012' min='1975' breaks='1975,1985,1995,2005' label='Q172_4'>Year Of Settlement</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q212'>Multi-Owner Occupation</option>
-        <option value='sequ' max='5' min='1' breaks='1,2,3,4' label='Q196'>Families Living On Lot</option>
-        <option value='sequ' max='7.5' min='1' breaks='1.5,3,4.5,6' label='Q170'>People Living In Household</option>
-        <option value='sequ' max='68' min='20' breaks='13.6,27.2,40.8,54.4' label='Q169_1'>Age Of Domestic Partner</option>
-        <option value='sequ' max='3.5' min='0' breaks='0.7,1.4,2.1,2.8' label='Q15'>Education - Respondent</option>
-        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q17'>Education - Resp. Mother</option>
-        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q18'>Education - Resp. Father</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q19'>School Age Children</option>
-        <option value='sequ' max='3' min='1' breaks='1.3,1.6,2.1,2.4' label='Q19_1'>Number Of School Age Children</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q33_1'>Employment</option>
-        <option value='qual' count='10' label='Q33'>Employment Status</option>
-        <option value='sequ' max='4' min='1' breaks='0.9,1.9,2.9,3.9' label='Q34'>Commute Time</option>
-        <option value='sequ' max='3' min='1' breaks='0.6,1.2,1.8,2.4' label='Q37'>Duration Of Unemployment</option>
-        <option value='sequ' max='4' min='0' breaks='0.8,1.6,2.4,3.2' label='Q38'>Workers Per Household</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q41'>Social Assistance</option>
-        <option value='sequ' max='7640' min='440' breaks='1528,3056,4584,6112' label='Q40'>Monthly Income</option>
-        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q177'>Household Profit From Rental</option>
-        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q83'>Sense Of Security - Home</option>
-        <option value='sequ' max='2' min='0' breaks='0.4,0.8,1.2,1.6' label='Q84'>Sense Of Security - Neighborhood</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q179'>Self-Builder</option>
-        <option value='qual' count='5' label='Q179_1'>Participation In Self-Built Home Construction</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q163'>Intention To Renovate In The Near Future</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q102'>Involvement In Construction Of Another Person's Home</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q151'>Involvement In Construction Of A Community Asset</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q73'>Regularization</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q52'>Renovation</option>
-        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q205'>Extent Of Renovation</option>
-        <option value='sequ' max='1000000' min='100' breaks='200000,400000,600000,800000' label='Q205_1'>Investment In Renovation</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q206'>Loan Acquisition</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q114'>Water Problems</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q192'>Flooding</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q115'>Electricity Problems</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q110'>Disability And Special Needs Families</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q118'>Recycling</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q120'>Use Of Home For Income Generation</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q126'>Sense Of living In An  Optimum Location</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q185'>Access To A Community Leader</option>
+        <option value='qual' count='random' label='Q1_3'> /Núcleo</option>
+        <option value='qual' count='4' label='Q3'>Tipo De Habitação</option>
+        <option value='sequ' max='8' min='1' breaks='1.6,3.2,4.8,6.4' label='Q4'>Pavimentos</option>
+        <option value='sequ' max='68.5' min='26.5' breaks='27.4,33,41.1,54.8' label='Q11'>Idade</option>
+        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q12'>Genero</option>
+        <option value='sequ' max='55' min='2' breaks='11,22,33,44' label='Q197'>Duração da residência - São Paulo</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q54'>Deslocamento residente</option>
+        <option value='sequ' max='32' min='1' breaks='6.4,12.8,19.2,25.6' label='Q42'>Duração da residência - Casa</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q139'>Propriedade Original</option>
+        <option value='qual' count='random' label='Q10'>Posse</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q5_1'>Propriedades de aluguel</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q214'>Proprietário-Ocupação</option>
+        <option value='sequ' max='2012' min='1975' breaks='1975,1985,1995,2005' label='Q172_4'>Ano da liquidação</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q212'>Profissão Multi-Proprietário</option>
+        <option value='sequ' max='5' min='1' breaks='1,2,3,4' label='Q196'>Famílias que vivem em lote</option>
+        <option value='sequ' max='7.5' min='1' breaks='1.5,3,4.5,6' label='Q170'>Pessoas vivendo na casa</option>
+        <option value='sequ' max='68' min='20' breaks='13.6,27.2,40.8,54.4' label='Q169_1'>Idade do Parceiro Doméstico</option>
+        <option value='sequ' max='3.5' min='0' breaks='0.7,1.4,2.1,2.8' label='Q15'>Educação - Inquirido</option>
+        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q17'>Educação - Resp. Mãe</option>
+        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q18'>Educação - Resp. Pai</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q19'>Idade Escolar Crianças</option>
+        <option value='sequ' max='3' min='1' breaks='1.3,1.6,2.1,2.4' label='Q19_1'>Número de crianças em idade escolar</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q33_1'>Emprego</option>
+        <option value='qual' count='10' label='Q33'>Situação de emprego</option>
+        <option value='sequ' max='4' min='1' breaks='0.9,1.9,2.9,3.9' label='Q34'>Tempo de viagem</option>
+        <option value='sequ' max='3' min='1' breaks='0.6,1.2,1.8,2.4' label='Q37'>Duração do Desemprego</option>
+        <option value='sequ' max='4' min='0' breaks='0.8,1.6,2.4,3.2' label='Q38'>Trabalhadores por família</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q41'>Assistência Social</option>
+        <option value='sequ' max='7640' min='440' breaks='1528,3056,4584,6112' label='Q40'>Renda mensal</option>
+        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q177'>Lucro da casa do aluguel</option>
+        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q83'>Sentido de segurança - Home</option>
+        <option value='sequ' max='2' min='0' breaks='0.4,0.8,1.2,1.6' label='Q84'>Sentido de Segurança - Bairro</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q179'>Autoconstrução</option>
+        <option value='qual' count='5' label='Q179_1'>Participação na construção de casas autoconstruídas</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q163'>Intenção de renovar no futuro próximo</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q102'>Envolvimento na construção de uma outra pessoa</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q151'>Envolvimento na construção de um recurso comunitário</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q73'>Regularização</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q52'>Renovação</option>
+        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q205'>Extensão da renovação</option>
+        <option value='sequ' max='1000000' min='100' breaks='200000,400000,600000,800000' label='Q205_1'>Investimento na renovação</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q206'>Aquisição de Empréstimo</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q114'>Problemas de água</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q192'>Inundações</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q115'>Problemas de eletricidade</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q110'>Famílias de deficiência e necessidades especiais</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q118'>Reciclando</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q120'>Uso de casa para geração de renda</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q126'>Sentido de viver em um ótimo local</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q185'>Acesso a um líder da comunidade</option>
       </select>
     </div>
 
@@ -179,7 +179,7 @@
   <script src="data/heliopolis0729.js"></script>
   <script src="data/heliopolisdistrict.js"></script>
   <script src="data/saofranciscodistrict.js"></script>
-  <script src="js/customMapFunctions.js"></script>
+  <script src="js/customMapFunctions-pr.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
