--- a/pr.html
+++ b/pr.html
@@ -83,56 +83,56 @@
   <div class="site-selection-container col-8"> -->
       <select class="metric-selection" style="min-width: 180px; max-width: 250px">
         <option value=""></option>
-        <option value='qual' count='random' label='Q1_3'> /Núcleo</option>
-        <option value='qual' count='4' label='Q3'>Tipo De Habitação</option>
-        <option value='sequ' max='8' min='1' breaks='1.6,3.2,4.8,6.4' label='Q4'>Pavimentos</option>
-        <option value='sequ' max='68.5' min='26.5' breaks='27.4,33,41.1,54.8' label='Q11'>Idade</option>
-        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q12'>Genero</option>
-        <option value='sequ' max='55' min='2' breaks='11,22,33,44' label='Q197'>Duração da residência - São Paulo</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q54'>Deslocamento residente</option>
-        <option value='sequ' max='32' min='1' breaks='6.4,12.8,19.2,25.6' label='Q42'>Duração da residência - Casa</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q139'>Propriedade Original</option>
-        <option value='qual' count='random' label='Q10'>Posse</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q5_1'>Propriedades de aluguel</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q214'>Proprietário-Ocupação</option>
-        <option value='sequ' max='2012' min='1975' breaks='1975,1985,1995,2005' label='Q172_4'>Ano da liquidação</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q212'>Profissão Multi-Proprietário</option>
-        <option value='sequ' max='5' min='1' breaks='1,2,3,4' label='Q196'>Famílias que vivem em lote</option>
-        <option value='sequ' max='7.5' min='1' breaks='1.5,3,4.5,6' label='Q170'>Pessoas vivendo na casa</option>
-        <option value='sequ' max='68' min='20' breaks='13.6,27.2,40.8,54.4' label='Q169_1'>Idade do Parceiro Doméstico</option>
-        <option value='sequ' max='3.5' min='0' breaks='0.7,1.4,2.1,2.8' label='Q15'>Educação - Inquirido</option>
-        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q17'>Educação - Resp. Mãe</option>
-        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q18'>Educação - Resp. Pai</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q19'>Idade Escolar Crianças</option>
-        <option value='sequ' max='3' min='1' breaks='1.3,1.6,2.1,2.4' label='Q19_1'>Número de crianças em idade escolar</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q33_1'>Emprego</option>
-        <option value='qual' count='10' label='Q33'>Situação de emprego</option>
-        <option value='sequ' max='4' min='1' breaks='0.9,1.9,2.9,3.9' label='Q34'>Tempo de viagem</option>
-        <option value='sequ' max='3' min='1' breaks='0.6,1.2,1.8,2.4' label='Q37'>Duração do Desemprego</option>
-        <option value='sequ' max='4' min='0' breaks='0.8,1.6,2.4,3.2' label='Q38'>Trabalhadores por família</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q41'>Assistência Social</option>
-        <option value='sequ' max='7640' min='440' breaks='1528,3056,4584,6112' label='Q40'>Renda mensal</option>
-        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q177'>Lucro da casa do aluguel</option>
-        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q83'>Sentido de segurança - Home</option>
-        <option value='sequ' max='2' min='0' breaks='0.4,0.8,1.2,1.6' label='Q84'>Sentido de Segurança - Bairro</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q179'>Autoconstrução</option>
-        <option value='qual' count='5' label='Q179_1'>Participação na construção de casas autoconstruídas</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q163'>Intenção de renovar no futuro próximo</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q102'>Envolvimento na construção de uma outra pessoa</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q151'>Envolvimento na construção de um recurso comunitário</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q73'>Regularização</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q52'>Renovação</option>
-        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q205'>Extensão da renovação</option>
-        <option value='sequ' max='1000000' min='100' breaks='200000,400000,600000,800000' label='Q205_1'>Investimento na renovação</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q206'>Aquisição de Empréstimo</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q114'>Problemas de água</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q192'>Inundações</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q115'>Problemas de eletricidade</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q110'>Famílias de deficiência e necessidades especiais</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q118'>Reciclando</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q120'>Uso de casa para geração de renda</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q126'>Sentido de viver em um ótimo local</option>
-        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q185'>Acesso a um líder da comunidade</option>
+        <option value='qual' count='random' label='Q1_3' legend='none'>Núcleo</option>
+        <option value='qual' count='4' label='Q3' legend='none'>Tipo De Habitação</option>
+        <option value='sequ' max='8' min='1' breaks='1.6,3.2,4.8,6.4' label='Q4' legend='none'>Pavimentos</option>
+        <option value='sequ' max='68.5' min='26.5' breaks='27.4,33,41.1,54.8' label='Q11' legend='none'>Idade</option>
+        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q12' legend='gender'>Genero</option>
+        <option value='sequ' max='55' min='2' breaks='11,22,33,44' label='Q197' legend='none'>Duração da residência - São Paulo</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q54' legend='affirm'>Deslocamento residente</option>
+        <option value='sequ' max='32' min='1' breaks='6.4,12.8,19.2,25.6' label='Q42' legend='none'>Duração da residência - Casa</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q139' legend='affirm'>Propriedade Original</option>
+        <option value='qual' count='random' label='Q10' legend='none'>Posse</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q5_1' legend='affirm'>Propriedades de aluguel</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q214' legend='affirm'>Proprietário-Ocupação</option>
+        <option value='sequ' max='2012' min='1975' breaks='1975,1985,1995,2005' label='Q172_4' legend='none'>Ano da liquidação</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q212' legend='affirm'>Profissão Multi-Proprietário</option>
+        <option value='sequ' max='5' min='1' breaks='1,2,3,4' label='Q196' legend='none'>Famílias que vivem em lote</option>
+        <option value='sequ' max='7.5' min='1' breaks='1.5,3,4.5,6' label='Q170' legend='none'>Pessoas vivendo na casa</option>
+        <option value='sequ' max='68' min='20' breaks='13.6,27.2,40.8,54.4' label='Q169_1' legend='none'>Idade do Parceiro Doméstico</option>
+        <option value='sequ' max='3.5' min='0' breaks='0.7,1.4,2.1,2.8' label='Q15' legend='edu'>Educação - Inquirido</option>
+        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q17' legend='edu'>Educação - Resp. Mãe</option>
+        <option value='sequ' max='5' min='0' breaks='1,2,3,4' label='Q18' legend='edu'>Educação - Resp. Pai</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q19' legend='affirm'>Idade Escolar Crianças</option>
+        <option value='sequ' max='3' min='1' breaks='1.3,1.6,2.1,2.4' label='Q19_1' legend='none'>Número de crianças em idade escolar</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q33_1' legend='affirm'>Emprego</option>
+        <option value='qual' count='10' label='Q33' legend='none'>Situação de emprego</option>
+        <option value='sequ' max='4' min='1' breaks='0.9,1.9,2.9,3.9' label='Q34' legend='commute'>Tempo de viagem</option>
+        <option value='sequ' max='3' min='1' breaks='0.6,1.2,1.8,2.4' label='Q37' legend='duration'>Duração do Desemprego</option>
+        <option value='sequ' max='4' min='0' breaks='0.8,1.6,2.4,3.2' label='Q38' legend='none'>Trabalhadores por família</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q41' legend='affirm'>Assistência Social</option>
+        <option value='sequ' max='7640' min='440' breaks='1528,3056,4584,6112' label='Q40' legend='none'>Renda mensal</option>
+        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q177' legend='affirm'>Lucro da casa do aluguel</option>
+        <option value='sequ' max='1' min='0' breaks='0.2,0.4,0.6,0.8' label='Q83' legend='secureA'>Sentido de segurança - Home</option>
+        <option value='sequ' max='2' min='0' breaks='0.4,0.8,1.2,1.6' label='Q84' legend='secureB'>Sentido de Segurança - Bairro</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q179' legend='affirm'>Autoconstrução</option>
+        <option value='qual' count='5' label='Q179_1' legend='none'>Participação na construção de casas autoconstruídas</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q163' legend='affirm'>Intenção de renovar no futuro próximo</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q102' legend='affirm'>Envolvimento na construção de uma outra pessoa</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q151' legend='affirm'>Envolvimento na construção de um recurso comunitário</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q73' legend='affirm'>Regularização</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q52' legend='affirm'>Renovação</option>
+        <option value='diver' max='2' min='1' breaks='1,1.25,1.5,1.75' label='Q205' legend='superf'>Extensão da renovação</option>
+        <option value='sequ' max='1000000' min='100' breaks='200000,400000,600000,800000' label='Q205_1' legend='none'>Investimento na renovação</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q206'> legend='affirm'Aquisição de Empréstimo</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q114' legend='affirm'>Problemas de água</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q192' legend='affirm'>Inundações</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q115' legend='affirm'>Problemas de eletricidade</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q110' legend='affirm'>Famílias de deficiência e necessidades especiais</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q118' legend='affirm'>Reciclando</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q120' legend='affirm'>Uso de casa para geração de renda</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q126' legend='affirm'>Sentido de viver em um ótimo local</option>
+        <option value='diver' max='1' min='0' breaks='0,0.25,0.5,0.75' label='Q185' legend='affirm'>Acesso a um líder da comunidade</option>
       </select>
     </div>
 
