--- a/pr.html
+++ b/pr.html
@@ -82,18 +82,17 @@
     </div>
   </div>
 
-  <div id="swipe-wrapper" class="row">
-    <div class="site-selection-container col-12">
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <select class="site-selection" style="min-width: 180px; max-width: 250px">
-            <option value=""></option>
+    <div id="swipe-wrapper" class="row">
+      <div class="row">
+        <div class="col align-help">
+            <select class="site-selection" style="width: 200px;text-align:left">
+              <option value=""></option>
               <option value="districts">Distritos</option>
               <option value="blocks">Blocos</option>
           </select>
-        </li>
-        <li class="nav-item" id="district-dropdown">
-          <select class="metric-selection1" style="width: 200px">
+        </div>
+        <div class="col" id="district-dropdown" style="text-align:left">
+            <select class="metric-selection1" style="width: 200px; text-align:left">
             <option value=""></option>
             <optgroup label="Social">
                 <option value='sequ' max='75' min='20' breaks='20,39.483,44.511,49.54' label='AGE'>Idade</option>
@@ -160,10 +159,9 @@
                 <option disabled>Em breve...</option>
             </optgroup>
             </select>
-        </li>
-        <li class="nav-item" id="block-dropdown" style="display:none">
-          <select class="metric-selection2" style="width: 200px">
-            <optgroup label="Social">
+        </div>
+        <div class="col" id="block-dropdown" style="display:none; text-align:left">
+          <select class="metric-selection2" style="width: 200px; text-align:left">
                 <option value='sequ' max='75' min='20' breaks='20,36.387,44.594,52.801' label='AGE'>Idade</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0.023,0.27,0.517' label='GEN_M'>GEN_M</option> -->
                 <option value='sequ' max='1' min='0' breaks='0,0.445,0.707,0.969' label='GEN_F'>Genero</option>
@@ -229,8 +227,7 @@
                     <option disabled>Em breve...</option>
                 </optgroup>
             </select>
-        </li>
-      </ul>
+        </div>
     </div>
   </div>
   <div id="map-row" class="row">
