--- a/pr.html
+++ b/pr.html
@@ -63,7 +63,7 @@
 
   <!-- Modal popup to describe the application-->
   <div class="modal fade" id="contact-popup" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog" role="document" style="max-width: 640px">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Como Usar:</h5>
@@ -72,8 +72,8 @@
           </button>
         </div>
         <div class="modal-body">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/XQu8TTBmGhA" frameborder="0" gesture="media" allow="encrypted-media"></iframe>
-
+          <iframe src="https://drive.google.com/file/d/1uRXza9CPVIGECmLsaH6aZF3iLSA8V-RJ/preview" width="100%" height="480" frameborder="0" gesture="media" allow="encrypted-media"></iframe>
+          <p>Assista o vídeo acima para uma introdução rápida de um minuto. </ p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
