--- a/single_page.html
+++ b/single_page.html
@@ -44,7 +44,7 @@
   <div id="swipe-wrapper" class="row">
     <div class="row">
       <div class="col" style="text-align:center">
-          <button class="btn btn-default" id="find_me">Find me!</button>
+          Add a new marker or <button class="btn btn-primary" id="find_me">Tag Your Location!</button>
       </div>
     </div>
   </div>
@@ -70,7 +70,7 @@
     <button type="submit" class="btn btn-primary" id="saveComment">
       <i class="fa fa-check" aria-hidden="true"></i>
     </button>
-    <button class="btn btn-default" id="cancelComment">
+    <button class="btn btn-secondary" id="cancelComment">
       <i class="fa fa-ban" aria-hidden="true"></i>
     </button>
   </div>
