add new button and removed toolbar

--- a/single_page.html
+++ b/single_page.html
@@ -44,7 +44,10 @@
   <div id="swipe-wrapper" class="row">
     <div class="row">
       <div class="col" style="text-align:center">
-          Add a new marker or <button class="btn btn-primary" id="find_me">Tag Your Location!</button>
+          <button class="btn btn-primary" id="markerDraw">Add a Marker</button>
+          <button class="btn btn-danger" id="markerCancel">Cancel</button>
+            or 
+          <button class="btn btn-primary" id="find_me">Tag Your Location!</button>
       </div>
     </div>
   </div>
