--- a/single_page.html
+++ b/single_page.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/single_page.css">
+  <link rel="stylesheet" href="./css/leaflet.photon.css" />
   <!-- <link rel="stylesheet" href="css/nav.css" /> -->
   <title>COMUNIDADOS</title>
 </head>
@@ -80,7 +81,8 @@
 
 
 
-
+  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script> -->
 
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
@@ -90,8 +92,10 @@
   <script src="js/variable_lookup.js"></script>
   <script src="js/helper_functions.js"></script>
   <script src="js/util/leaflet-hash.js"></script>
+  <!-- <script src="js/util/leaflet-search.js"></script> -->
   <script src="js/single_page_app.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/shortid@2.2.8/index.min.js"></script> -->
+  <script src="js/util/leaflet.photon.js"></script>
+
 </body>
 
 </html>
