updated legend situation with color bar

--- a/index.html
+++ b/index.html
@@ -94,65 +94,65 @@
           <select class="metric-selection1" style="width: 200px; text-align:left">
             <option value=""></option>
             <optgroup label="Social">
-                <option value='sequ' max='75' min='20' breaks='20,39.483,44.511,49.54' label='AGE'>Age</option>
+                <option value='sequ' max='75' min='20' breaks='20,39.483,44.511,49.54' label='AGE' legend='none'>Age</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0.066,0.229,0.391' label='GEN_M'>GEN_M</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.465,0.704,0.942' label='GEN_F'>Gender</option>
-                <option value='sequ' max='55' min='0' breaks='0,0.1,17.123,34.389' label='NUM_YR_SP'>Years in São Paulo</option>
-                <option value='sequ' max='19.858' min='0' breaks='0,4.242,10.082,15.922' label='NUM_YR_HSE'>Years in Current Dwelling</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.16,0.344,0.528' label='BRTH_SP'>Native Paulista</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.498,0.79,1.081' label='BRTH_REG_NE'>Non Native Paulista - North-East</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.05,0.112,0.258' label='BRTH_REG_S'>Non Native Paulista - South-Central</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.05,0.292,0.586' label='DISP_Y'>Displacement</option>
-                <option value='sequ' max='5.469' min='0' breaks='0,0.1,1.281,2.61' label='NUM_FAM_LOT'>Lot Occupation</option>
-                <option value='sequ' max='5' min='0' breaks='0,2.23,3.431,4.633' label='NUM_PPL_HSHD'>Household Inhabitants</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.107,0.231' label='ED_LVL_0'>Respondent Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.213,0.43,0.648' label='ED_LVL_1'>Respondent Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.157,0.361,0.566' label='ED_LVL_2'>Respondent Education - High School</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.091,0.198' label='ED_LVL_3'>Respondent Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.465,0.704,0.942' label='GEN_F' legend='gender'>Gender</option>
+                <option value='sequ' max='55' min='0' breaks='0,0.1,17.123,34.389' label='NUM_YR_SP' legend='none'>Years in São Paulo</option>
+                <option value='sequ' max='19.858' min='0' breaks='0,4.242,10.082,15.922' label='NUM_YR_HSE' legend='none'>Years in Current Dwelling</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.16,0.344,0.528' label='BRTH_SP' legend='affirm'>Native Paulista</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.498,0.79,1.081' label='BRTH_REG_NE' legend='affirm'>Non Native Paulista - North-East</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.05,0.112,0.258' label='BRTH_REG_S' legend='affirm'>Non Native Paulista - South-Central</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.05,0.292,0.586' label='DISP_Y' legend='affirm'>Displacement</option>
+                <option value='sequ' max='5.469' min='0' breaks='0,0.1,1.281,2.61' label='NUM_FAM_LOT' legend='none'>Lot Occupation</option>
+                <option value='sequ' max='5' min='0' breaks='0,2.23,3.431,4.633' label='NUM_PPL_HSHD' legend='none'>Household Inhabitants</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.107,0.231' label='ED_LVL_0' legend='edu'>Respondent Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.213,0.43,0.648' label='ED_LVL_1' legend='edu'>Respondent Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.157,0.361,0.566' label='ED_LVL_2' legend='edu'>Respondent Education - High School</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.091,0.198' label='ED_LVL_3' legend='edu'>Respondent Education - Undergraduate Deg.</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_4'>ED_LVL_4</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.276,0.523,0.769' label='ED_LVL_MOT_0'>Respondent Mother's Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.091,0.307,0.522' label='ED_LVL_MOT_1'>Respondent Mother's Education - Elementary </option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.052,0.138' label='ED_LVL_MOT_2'>Respondent Mother's Education - High School </option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.012,0.048' label='ED_LVL_MOT_3'>Respondent Mother's Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.276,0.523,0.769' label='ED_LVL_MOT_0' legend='edu'>Respondent Mother's Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.091,0.307,0.522' label='ED_LVL_MOT_1' legend='edu'>Respondent Mother's Education - Elementary </option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.052,0.138' label='ED_LVL_MOT_2' legend='edu'>Respondent Mother's Education - High School </option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.012,0.048' label='ED_LVL_MOT_3' legend='edu'>Respondent Mother's Education - Undergraduate Deg.</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_MOT_4'>ED_LVL_MOT_4</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.099,0.301' label='ED_LVL_MOT_5'>Respondent Mother's Education - No Information</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.099,0.301' label='ED_LVL_MOT_5' legend='edu'>Respondent Mother's Education - No Information</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_MOT_6'>ED_LVL_MOT_6</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.23,0.456,0.682' label='ED_LVL_FAT_0'>Respondent Father's Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.048,0.273,0.499' label='ED_LVL_FAT_1'>Respondent Father's Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.056,0.144' label='ED_LVL_FAT_2'>Respondent Father's Education - High School</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.017,0.061' label='ED_LVL_FAT_3'>Respondent Father's Education - Undergraduate Deg.</option>
-                <option value='sequ' max='1' min='0' breaks='0,0,0.003,0.004' label='ED_LVL_FAT_4'>Respondent Father's Education - Graduate Deg.</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.09,0.19,0.405' label='ED_LVL_FAT_5'>Respondent Father's Education - No Information</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.23,0.456,0.682' label='ED_LVL_FAT_0' legend='edu'>Respondent Father's Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.048,0.273,0.499' label='ED_LVL_FAT_1' legend='edu'>Respondent Father's Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.056,0.144' label='ED_LVL_FAT_2' legend='edu'>Respondent Father's Education - High School</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.017,0.061' label='ED_LVL_FAT_3' legend='edu'>Respondent Father's Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0,0.003,0.004' label='ED_LVL_FAT_4' legend='edu'>Respondent Father's Education - Graduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.09,0.19,0.405' label='ED_LVL_FAT_5' legend='edu'>Respondent Father's Education - No Information</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_FAT_6'>ED_LVL_FAT_6</option> -->
-                <option value='sequ' max='2.125' min='0' breaks='0,0.048,0.889,1.73' label='NUM_SCH_AGE_CHD'>School Age Children</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.224,0.445,0.666' label='EMPL_Y'>Employment</option>
-                <option value='sequ' max='2655.269' min='0' breaks='0,812.878,1525.882,2238.887' label='INCOME'>Income</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.046,0.211,0.376' label='USE_HM_INCM'>Home Income Generation</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.001,0.089,0.189' label='SPCL_NEEDS'>Special Needs</option>
+                <option value='sequ' max='2.125' min='0' breaks='0,0.048,0.889,1.73' label='NUM_SCH_AGE_CHD' legend='none'>School Age Children</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.224,0.445,0.666' label='EMPL_Y' legend='secureA'>Employment</option>
+                <option value='sequ' max='2655.269' min='0' breaks='0,812.878,1525.882,2238.887' label='INCOME' legend='none'>Income</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.046,0.211,0.376' label='USE_HM_INCM' legend='secureA'>Home Income Generation</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.001,0.089,0.189' label='SPCL_NEEDS' legend='secureA'>Special Needs</option>
             </optgroup>
             <optgroup label="Physical">
-                <option value='sequ' max='8' min='1' breaks='1,2.101,2.876,3.651' label='NUM_FLR'>Building Height</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.373,0.652,0.931' label='RENOV'>Home Expansion</option>
-                <option value='sequ' max='4' min='0' breaks='0,1.967,3.012,3.5' label='BLDG_QLTY'>Building Quality and Physical Consolidation</option>
+                <option value='sequ' max='8' min='1' breaks='1,2.101,2.876,3.651' label='NUM_FLR' legend='none'>Building Height</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.373,0.652,0.931' label='RENOV' legend='secureA'>Home Expansion</option>
+                <option value='sequ' max='4' min='0' breaks='0,1.967,3.012,3.5' label='BLDG_QLTY' legend='none'>Building Quality and Physical Consolidation</option>
             </optgroup>
             <optgroup label="Urban Livability">
-                <option value='sequ' max='1' min='0' breaks='0,0.381,0.681,0.981' label='SNS_SEC_HSE'>Sense of Security at Home</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.105,0.441,0.776' label='SNS_SEC_NEI'>Sense of Security on the Street</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.009,0.422,0.834' label='SNS_GOOD_ACS'>Sense of Access to Public Services</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.137,0.33' label='ACS_LDR'>Sense of Access to Community Leader</option>
-                <option value='sequ' max='11' min='0' breaks='0,0.1,2.576,5.738' label='LIXO_IMM_VIC'>Everyday challenge – Trash</option>
-                <option value='sequ' max='17' min='0' breaks='0,1,2.939,7.092' label='DROGA_IMM_VIC'>Everyday challenge – Drugs</option>
-                <option value='sequ' max='39' min='0' breaks='0,1,10.061,23.036' label='BARULHO_IMM_VIC'>Everyday challenge – Noise Pollution</option>
-                <option value='sequ' max='36' min='0' breaks='0,1,8.394,20.023' label='NADA_IMM_VIC'>Everyday challenge – Nothing</option>
-                <option value='sequ' max='4' min='0' breaks='0,1,1.152,2.568' label='ASSAULTO_IMM_VIC'>Everyday challenge – Street Assault</option>
-                <option value='sequ' max='5' min='0' breaks='0,1,2,3' label='FUNK_IMM_VIC'>Everyday challenge – Funk Street Parties</option>
-                <option value='sequ' max='0.8' min='0' breaks='0,0.208,0.457,0.705' label='CUR_INTENT'>Intention</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.086,0.207' label='POL_AFL'>Political Affiliation</option>
-                <option value='sequ' max='4' min='0' breaks='0,0.755,2.142,3.529' label='POL_PRIOR_INFRA'>Critical Change - Infrastructure and Sanitation</option>
-                <option value='sequ' max='4.333' min='0' breaks='0,0.882,2.401,3.92' label='POL_PRIOR_WST_MGT'>Critical Change - Waste Management</option>
-                <option value='sequ' max='3.64' min='0' breaks='0,0.669,2.02,3.371' label='POL_PRIOR_ENV'>Critical Change - Environmental Stewardship</option>
-                <option value='sequ' max='4.167' min='0' breaks='0,0.774,2.303,3.832' label='POL_PRIOR_HSG'>Critical Change - Housing</option>
-                <option value='sequ' max='4' min='0' breaks='0,0.579,1.97,3.36' label='POL_PRIOR_TTL'>Critical Change - Title</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.381,0.681,0.981' label='SNS_SEC_HSE' legend='secureA'>Sense of Security at Home</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.105,0.441,0.776' label='SNS_SEC_NEI' legend='secureA'>Sense of Security on the Street</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.009,0.422,0.834' label='SNS_GOOD_ACS' legend='secureA'>Sense of Access to Public Services</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.137,0.33' label='ACS_LDR' legend='secureA'>Sense of Access to Community Leader</option>
+                <option value='sequ' max='11' min='0' breaks='0,0.1,2.576,5.738' label='LIXO_IMM_VIC' legend='none'>Everyday challenge – Trash</option>
+                <option value='sequ' max='17' min='0' breaks='0,1,2.939,7.092' label='DROGA_IMM_VIC' legend='none'>Everyday challenge – Drugs</option>
+                <option value='sequ' max='39' min='0' breaks='0,1,10.061,23.036' label='BARULHO_IMM_VIC' legend='none'>Everyday challenge – Noise Pollution</option>
+                <option value='sequ' max='36' min='0' breaks='0,1,8.394,20.023' label='NADA_IMM_VIC' legend='none'>Everyday challenge – Nothing</option>
+                <option value='sequ' max='4' min='0' breaks='0,1,1.152,2.568' label='ASSAULTO_IMM_VIC' legend='none'>Everyday challenge – Street Assault</option>
+                <option value='sequ' max='5' min='0' breaks='0,1,2,3' label='FUNK_IMM_VIC' legend='none'>Everyday challenge – Funk Street Parties</option>
+                <option value='sequ' max='0.8' min='0' breaks='0,0.208,0.457,0.705' label='CUR_INTENT' legend='none'>Intention</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.086,0.207' label='POL_AFL' legend='secureA'>Political Affiliation</option>
+                <option value='sequ' max='4' min='0' breaks='0,0.755,2.142,3.529' label='POL_PRIOR_INFRA' legend='none'>Critical Change - Infrastructure and Sanitation</option>
+                <option value='sequ' max='4.333' min='0' breaks='0,0.882,2.401,3.92' label='POL_PRIOR_WST_MGT' legend='none'>Critical Change - Waste Management</option>
+                <option value='sequ' max='3.64' min='0' breaks='0,0.669,2.02,3.371' label='POL_PRIOR_ENV' legend='none'>Critical Change - Environmental Stewardship</option>
+                <option value='sequ' max='4.167' min='0' breaks='0,0.774,2.303,3.832' label='POL_PRIOR_HSG' legend='none'>Critical Change - Housing</option>
+                <option value='sequ' max='4' min='0' breaks='0,0.579,1.97,3.36' label='POL_PRIOR_TTL' legend='none'>Critical Change - Title</option>
             </optgroup>
             <optgroup label="Synthesized Indicators">
                 <option disabled>Coming Soon...</option>
@@ -248,9 +248,23 @@
     <div id="feature-info"></div>
     <div id="description-legend" class="cartodb-legend choropleth" style="display: block;">
       <h4 id="selected_column_title"></h4>
-      <div id="about-text">about-text</div>
+			<div id="about-text">about-text</div>
+			<ul id="color-range">
+        <li class="min">0</li>
+        <li class="max">13295</li>
+        <li class="graph count_441">
+          <div class="colors">
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+          </div>
+        </li>
+      </ul>
     </div>
-  </div>
+	</div>
+	
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
